syntax = "proto3";
import "common_proto/common.proto";
option cc_generic_services = true;

message TeamTestS2SRequest
{
}

message TeamTestS2SRespone
{
	Tips error = 1;
}


service TeamService
{
  rpc EnterScene (TeamTestS2SRequest) returns (TeamTestS2SRespone);
}