#include "team.pb.h"
#include "src/game_logic/thread_local/thread_local_storage.h"
#include "src/network/message_system.h"

///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE
void TeamService::EnterScene(::google::protobuf::RpcController* controller,
	const ::TeamTestS2SRequest* request,
	::TeamTestS2SRespone* response,
	 ::google::protobuf::Closure* done)
{
///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE
}
